# dlx4sop

./: .clang-format  .gitignore  ARCHITECTURE.md  ARCHITECTURE_SPEED_ANNEX.md  CITATION.bib  DEFERRED_WORK.md  README.md  meson.build  meson_options.txt  optimization_sprint.md  scoreboard-details.md  scoreboard-labelled.json  scoreboard-labelled.md  scoreboard-sign.json  scoreboard-sign.md  scoreboard.json  scoreboard.md  tasks.md
.cache/clangd/index/: bench_kernels.c.2716D0E43361B4CA.idx  bitset.c.6CBE1B93A0136514.idx  bitset.h.2E5B239DAC9C0B92.idx  branch.c.D2796F3261110032.idx  (+41 more)
.gauntlet/: adapter.py  adapter_wmc.py  bootstrap-wmc.sh  bootstrap.sh  requirements.txt
.github/workflows/: ci.yml  release-binaries.yml
benchmarks/: README.md  corpus.lock.json
benchmarks/hard-qsop/: manifest.json  selection.tsv
benchmarks/manifests/: dlx4sop-tier-0-32-manifest.json  dlx4sop-tier-129-256-manifest.json  dlx4sop-tier-257-512-sample-manifest.json  dlx4sop-tier-33-64-manifest.json  dlx4sop-tier-65-128-manifest.json
docs/: solver-internals.md
docs/lean/: Formal.lean  LEAN_FORMALIZATION_PLAN.md  LICENSE  README.md  lake-manifest.json  lakefile.toml
include/dlx4sop/: bitset.h  min_fill.h  qsop.h  qsop_solve.h  qsop_stats.h  qsop_wmc.h  residual.h  residue.h  simd.h
scripts/: analyze_branch_regressions.py  bench.py  bench_branch.py  bench_branch_treewidth.py  bench_common.py  bench_frozen_qsop.py  bench_gauntlet.py  bench_rankwidth_matrix_join.py  bench_sop.py  bench_sop_local.py  bench_wmc_ganak.py  branch_policy_profiles.py  build_corpus.py  build_external_qasm_manifest.py  build_sop_corpus.py  check-coverage.sh  check_generated_scoreboard.py  check_qasm_manifest_qiskit.py  compare_native_solver_results.py  compare_rankwidth_backends.py  freeze_gauntlet_qsop.py  gen_rankwidth_family.py  gen_scaling_family.py  harvest_mqt_bench.py  materialize_mqt_qsop_corpus.py  plot_scoreboard.py  profile_mqt_qsop.py  qc2qasm.py  qgraph2qasm.py  refresh_scoreboard.py  render_scoreboard.py  run_corpus_benchmarks.py  scan_feynmandd_qasm.py  scan_gauntlet_coverage.py  scan_mqt_bench.py  summarize_qasm_report.py
scripts/benchlib/: __init__.py
scripts/legacy/: README.md
src/cli/: cli_common.c  cli_common.h  qasm2sop.c  sop2wmc.c  sop_check.c  sop_solve.c  sop_stats.c
src/core/: amplitude.c  bitset.c  min_fill.c  qsop.c  qsop_internal.h  qsop_parse.c  qsop_simplify.c  qsop_stats.c  qsop_wmc.c  qsop_write.c  residue.c  simd_avx2.c  simd_avx512.c  simd_neon.c  simd_scalar.c  simd_sse.c
src/solve/: branch.c  branch_shadow.c  branch_shadow.h  bruteforce.c  component_key.c  component_key.h  components.c  rankwidth.c  rankwidth_cutrank.c  rankwidth_decomp.c  rankwidth_dp_complex.c  rankwidth_dp_counts.c  rankwidth_drivers.c  rankwidth_internal.h  rankwidth_tables.c  residual.c  trace.h  treewidth.c
tests/: qasm_solver_corpus.json  test_analyze_branch_regressions.py  test_bench_branch_treewidth.py  test_bench_common.py  test_bench_gauntlet.py  test_bench_qasm_corpus.py  test_bench_tune_mqt.py  test_bench_wmc_ganak.py  test_branch_inferq_regression.py  test_branch_policy.py  test_branch_regression_guard.py  test_branch_shadow_regression_guard.py  test_check_generated_scoreboard.py  test_compare_native_solver_results.py  test_compare_rankwidth_backends.py  test_compare_rankwidth_generators.py  test_differential_backends.py  test_external_manifest.py  test_gen_rankwidth_family.py  test_harvest_mqt_bench.py  test_native_simulator_benchmark.py  test_plot_scoreboard.py  test_qasm2sop.py  test_qasm2sop_optimize.py  test_qasm_aer.py  test_qasm_amplitudes.py  test_qasm_exact_widths.py  test_qasm_manifest_helpers.py  test_qasm_native_compat.py  test_qasm_qiskit.py  test_qasm_solver_corpus.py  test_qc2qasm.py  test_qgraph2qasm.py  test_rankwidth_best.py  test_rankwidth_dump.py  test_rankwidth_family_backends.py  test_rankwidth_family_crosscheck.py  test_rankwidth_join_strategy.py  test_rankwidth_memory_budget.py  test_rankwidth_search.py  (+19 more)
tests/fuzz/: fuzz_qsop_parse.c
tests/golden/: inferq_472592.qsop  invalid_sign_coeff.qsop  labelled_expected.qsop  labelled_raw.qsop  qasm_ch.expected  qasm_ch.qasm  qasm_cp_decimal_dyadic.expected  qasm_cp_decimal_dyadic.qasm  qasm_cry.expected  qasm_cry.qasm  qasm_cry_quarter.expected  qasm_cry_quarter.qasm  qasm_crz.expected  qasm_crz.qasm  qasm_crz_quarter.expected  qasm_crz_quarter.qasm  qasm_csx_dcx.expected  qasm_csx_dcx.qasm  qasm_cu.expected  qasm_cu.qasm  qasm_cu1.expected  qasm_cu1.qasm  qasm_cx_cx.qasm  qasm_cz.expected  qasm_cz.qasm  qasm_feynmandd_quadratic.expected  qasm_feynmandd_quadratic.qasm  qasm_h_boundary.expected  qasm_h_h.expected  qasm_hth.expected  qasm_hth.qasm  qasm_named_cphase.expected  qasm_named_cphase.qasm  qasm_p.expected  qasm_p.qasm  qasm_phase_eighth.expected  qasm_phase_eighth.qasm  qasm_qft4.expected  qasm_qft4.qasm  qasm_rccx.expected  (+78 more)
tests/unit/: bench_kernels.c  qsop_simplify_reference.c  test_bitset.c  test_branch_api.c  test_branch_propagate.c  test_branch_shadow.c  test_branch_single_cache.c  test_min_fill.c  test_qsop_simplify.c  test_qsop_simplify_differential.c  test_rankwidth_decomp.c  test_rankwidth_join.c  test_residual.c  test_residue.c  test_simd_kernels.c  test_treewidth_join.c  test_wmc.c
tools/: analyze_branch_regressions.py  bench.py  bench_common.py  bench_kernels.c  bench_qasm_corpus.py  bench_qasm_native_simulator.py  bench_qasm_widths.py  bench_sop_local.py  bench_wmc_ganak.py  build_corpus.py  build_external_qasm_manifest.py  check-coverage.sh  check_generated_scoreboard.py  check_qasm_manifest_qiskit.py  compare_native_solver_results.py  compare_rankwidth_backends.py  compare_rankwidth_generators.py  gen_rankwidth_family.py  gen_scaling_family.py  harvest_mqt_bench.py  materialize_mqt_qsop_corpus.py  plot_scoreboard.py  profile_mqt_qsop.py  qasm_native_compat.py  refresh_scoreboard.py  render_scoreboard.py  rerun_branch_scoreboard.py  run_branch_retune.py  run_corpus_benchmarks.py  scan_feynmandd_qasm.py  scan_gauntlet_coverage.py  scan_mqt_bench.py  summarize_qasm_report.py  tune_branch_thresholds.py
(+498 files in other folders)
